@@ -1,2 +1,3 @@
 JAR=`find lib/ -name 'aggregator-*.jar'`
-java -cp $JAR -Xmx4096m eu.clarin.sru.fcs.aggregator.app.Aggregator server conf/aggregator_devel.yml
+java --add-modules java.xml.bind -cp $JAR -Xmx4096m eu.clarin.sru.fcs.aggregator.app.Aggregator server conf/aggregator_devel.yml
+
